# P6-Project

./: .gitignore  Handler.py  Makefile  README.md  canny_thresholder.py  colour.npy  depth.npy  log.json  main.cpp  main.py  npy2jpg.py  ruler.py
RealSense/: DefectClassifier.py  clean.py  plotter.m
RealSense/devel/: .catkin  .rosinstall
RealSense/great_bag_path/: 854166.bag
RealSense/great_pointcloud_path/: 2021-04-16 10:56:29.859247.ply  2021-04-16 11:30:34.949847.ply  2021-04-18 12:36:15.664702_REAL.ply  968641_REAL.ply
arraysubpub/: CMakeLists.txt  Tile.msg  package.xml
arraysubpub/msg/: Combined_Tiles.msg  Tile.msg
arraysubpub/src/: arraypub.py
training_data/new_data/: 30deg_2021-03-30 10_12_31.658591_Color.npy  30deg_2021-03-30 10_12_31.658591_Depth.npy  30deg_2021-03-30 10_13_34.844150_Color.npy  30deg_2021-03-30 10_13_34.844150_Depth.npy  30deg_2021-03-30 10_19_41.503102_Color.npy  30deg_2021-03-30 10_19_41.503102_Depth.npy  30deg_2021-03-30 10_19_45.260361_Color.npy  30deg_2021-03-30 10_19_45.260361_Depth.npy  30deg_2021-03-30 10_20_38.743914_Color.npy  30deg_2021-03-30 10_20_38.743914_Depth.npy  30deg_2021-03-30 10_20_48.898969_Color.npy  30deg_2021-03-30 10_20_48.898969_Depth.npy  30deg_2021-03-30 10_21_11.786195_Color.npy  30deg_2021-03-30 10_21_11.786195_Depth.npy  30deg_2021-03-30 10_21_40.000917_Color.npy  30deg_2021-03-30 10_21_40.000917_Depth.npy  30deg_2021-03-30 10_23_17.035901_Color.npy  30deg_2021-03-30 10_23_17.035901_Depth.npy  30deg_2021-03-30 10_23_58.873450_Color.npy  (+57 more)
yolact/: CMakeLists.txt  package.xml
yolact/src/: eval.py  (+1 more)
(+9 files in other folders)
